# Yamr

./: .travis.yml  CMakeLists.txt  Doxyfile  README  annotated.html  arg_8cpp.html  arg_8cpp__incl.md5  arg_8cpp_a6a4dc56b4fbd5da8f4475a2c7ac57674_cgraph.map  arg_8cpp_a6a4dc56b4fbd5da8f4475a2c7ac57674_icgraph.map  classThreadPool-members.html  classThreadPool.html  classThreadPool__coll__graph.md5  classes.html  dir_000001_000000.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  gtest_8cpp.html  gtest_8cpp__incl.map  gtest_8cpp__incl.md5  gtest_8cpp_a0974b2395039cb9c0c39ef44906776ee_cgraph.map  gtest_8cpp_a0974b2395039cb9c0c39ef44906776ee_cgraph.md5  gtest_8cpp_a1e09a4d443500f7e33bfa47463b6713f_cgraph.map  gtest_8cpp_a1e09a4d443500f7e33bfa47463b6713f_cgraph.md5  gtest_8cpp_a36ca32142d2aceb8fb650706abd7ff4d_cgraph.md5  gtest_8cpp_a79e54a3b557e94c374974beed428babc_cgraph.md5  gtest_8cpp_a8bdfd25c28e35fa8374fa11c4f39636e_cgraph.map  gtest_8cpp_a8bdfd25c28e35fa8374fa11c4f39636e_cgraph.md5  gtest_8cpp_a8fb6d2270d2e7538236af1c2317e015b_cgraph.map  gtest_8cpp_a8fb6d2270d2e7538236af1c2317e015b_cgraph.md5  gtest_8cpp_ada7b09fd63accb897aa4009faabd2e34_cgraph.md5  index.html  main_8cpp.html  (+50 more)
include/: mapping.h  pcout.h  reduce.h  threadpool.h  utilities.h  version.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
source/: arg.cpp  gtest.cpp  main.cpp  utilities.cpp
